# test_kbehra

./: CMakeLists.txt  README.md
src/: Author.cpp  Author.h  AuthorCollection.cpp  AuthorCollection.h  AuthorGroup.cpp  AuthorGroup.h  IAuthor.h  Library.cpp  Library.h  main.cpp
src/LibraryContents/: Book.cpp  Book.h  Comic.cpp  Comic.h  ILibraryContent.h  Movie.h  Novel.cpp  Novel.h
